# geotimex

./: CMakeLists.txt  geotimex.cpp  geotimex.h
src/dataUtil/: dataFormat.h  dataUtil.cpp  dataUtil.h  fftwUtil.h  flagUtil.h  ioUtil.cpp  ioUtil.h  memUtil.h
src/dataio/xt/: xt.cpp  xt.h
src/debugIO/: debugIO.cpp  debugIO.h  debugIO.hpp
src/dipManager/: dipManager.cpp  dipManager.h
src/geotimeUtil/: geotimeFlags.h  returnFlags.h
src/operators/: oparatorExtract.cpp  operatorExtract.h  operatorInsert.cpp  operatorInsert.h  operatorNabla.cpp  operatorNabla.h  operatorNabla.hpp  operatorNablaT.cpp  operatorNablaT.h  operatorNablaT.hpp
src/rgtVolumic/: rgtVolumic.cpp  rgtVolumic.h  rgtVolumicConjugateGradientCallBack.h  rgtVolumicConjugateGradientCallBack.hpp
src/signal/: dataThreshold.hpp
src/signal/leakyIntegration/: leakyIntegration.h  leakyIntegration.hpp
src/solver/: solver.cpp  solver.h  solverCallBack.hpp  solverCallback.h  solverUtil.h
src/solver/conjugateGradient/: conjugateGradient.h  conjugateGradient.hpp  conjugateGradientCallBack.h
src/solver/gradientDescent/: gradientDescent.h  gradientDescent.hpp  gradientDescentCallBack.h
src/solver/poisson/: poissonSolver.cpp  poissonSolver.h
src/solver/poisson/fftPoisson/: fftLaplacian.cpp  fftLaplacian.h  fftPoissonCPU.cpp  fftPoissonSolver.cpp  fftPoissonSolver.h  fftPoissonSolverCPU.cpp  fftPoissonSolverCPU.h
src/surfaceReconstruction/: surfaceReconstruction.cpp  surfaceReconstruction.h
src/util/: constraint.cpp  constraint.h  stringUtil.cpp  stringUtil.h  voxel.h
test/src/: test.cpp  test.h
test/src/geotime/reconstruction/: testReconstruction1d.cpp  testReconstruction1d.h  testReconstruction2d.cpp  testReconstruction2d.h
test/src/laplacian/: testLaplacian1d.cpp  testLaplacian1d.h
test/src/utest/: utConjugateGradient.cpp  utConjugateGradient.h  utConjugateGradientCallBack.h  utConjugateGradientCallBack.hpp  utGradientDescent.cpp  utGradientDescent.h  utGradientDescentCallBack.h  utGradientDescentCallBack.hpp  utRgtVolumic2d.cpp  utRgtVolumic2d.h  utRgtVolumic3d.cpp  utRgtVolumic3d.h  utSurfaceReconstruction.cpp  utSurfacereconstruction.h  utXt.cpp  utXt.h
